<resources>
    <string name="app_name">FarmUs</string>
    <string name="app_korean_name">파머스</string>
    <string name="previous">이전</string>
    <string name="example_text">내용 입력</string>
    <string name="category">카테고리</string>
    <string name="navi_home">홈</string>
    <string name="navi_favorites">좋아요</string>
    <string name="navi_farm">농장</string>
    <string name="navi_mypage">마이페이지</string>
    <string name="navi_chat">채팅</string>
    <string name="search_bar_hint_text">닉네임 또는 농장 이름을 입력하세요.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farm_us_recommend_farm">파머스 추천 농장</string>
    <string name="recent_searches">최근 검색어</string>
    <string name="delete_history">기록 삭제</string>
    <string name="filter_region">지역 필터링</string>
    <string name="select_region">원하는 지역을 선택해주세요.</string>
    <string name="apply">적용</string>
    <string name="all">전체</string>
    <string name="sign_out_kr">탈퇴하기</string>
    <string name="logout_kr">로그아웃</string>
    <string name="farm_rv_item_image">농장 이미지</string>
    <string name="example_address">서울특별시 강동구 고덕1동 479</string>
    <string name="example_farm_title">고덕 주말 농장</string>
    <string name="example_farm_size">4.5평 (15m^2)</string>
    <string name="example_farm_price">100,000원</string>
    <string name="example_farm_detail_views">최근 7일 조회수 100</string>
    <string name="request">분양 신청</string>
    <string name="farm_detail_description_title">농장 소개</string>
    <string name="example_farm_description">자유롭게 원하시는 모종 심으시면 됩니다.\n매주 체크하기 힘드시면 제가 따로 물주기는 해드릴 수 있으니, \n보시고 편하게 문의 주세요 !</string>
    <string name="farm_detail_information_title">상세 정보</string>
    <string name="farm_complete_button_text">홈으로 이동</string>
    <string name="copy_my_id"><u>아이디 복사하기</u></string>
    <string name="click_to_singup"><u>회원가입</u></string>
    <string name="term_uses">제 1장 총칙
제1조 (목적)
본 약관은 파머스가 제공하는 애플리케이션(이하 ‘당 애플리케이션) 제공하는 이용조건, 절차, 이용자와 당 애플리케이션의 권리, 의무, 책임사항과 기타 필요한 사항을 규정하는 것을 목적으로 합니다.

제2조 (약관의 명시와 개정)
1. 파머스는 이 약관의 내용과 주소지, 대표자명, 개인정보관리책임자명, 연락처(전화, 팩스, 전자우편주소 등) 등을 이용자가 알 수 있도록 당 애플리케이션의 초기화면(전면)에 게시합니다.
2. 파머스는 약관의규제에관한법률, 전자거래기본법, 전자서명법, 정보통신망이용 촉진 및 정보보호이용등에관한법률, 방문판매등에관한법률, 소비자보호법 등 관련법을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다. 약관을 개정할 경우에는 적용일자 등을 명시하여 현행약관과 함께 당 애플리케이션에 그 적용일자 7일이전부터 적용일자 전일까지 공지합니다.
3. 파머스는 귀하가 본 약관 내용에 동의하는 것을 조건으로 귀하에게 서비스를 제공할 것이며, 귀하가 본 약관의 내용에 동의하는 경우, 당 애플리케이션의 서비스 제공 행위 및 귀하의 서비스 사용 행위에는 본 약관이 우선적으로 적용될 것입니다.
4. 이 약관에 동의하는 것은 정기적으로 당 애플리케이션을 방문하여 약관의 변경사항을 확인하는 것에 동의함을 의미합니다. 변경된 약관에 대한 정보를 알지 못해 발생하는 이용자의 피해는 당 애플리케이션에서 책임지지 않습니다.
5. 당 애플리케이션 회원은 변경된 약관에 동의하지 않을 경우 회원 탈퇴(해지)를 요청할 수 있으며, 변경된 약관의 효력 발생일로부터 7일 이후에도 거부의사를 표시하지 아니하고 서비스를 계속 사용할 경우 약관의 변경 사항에 동의한 것으로 간주됩니다.
6. 본 약관에 명시되지 않은 사항은 관계 법령에 규정 되어있을 경우 그 규정에 따르며, 그렇지 않은 경우에는 일반적인 관례에 따릅니다.

제3조 (용어의 정의)
이 약관에서 사용하는 용어의 정의는 다음과 같습니다.
1. 이용자 : 서비스에 가입한 자
2. 이용자번호(ID) : 이용자 식별과 이용자의 서비스 이용을 위하여 이용계약 체결시 이용자가 설정한 문자와 숫자의 조합
3. 비밀번호 : 이용자의 비밀을 보호하기 위하여 이용자 자신이 설정한 문자 또는 숫자의 조합
4. 단말기 : 서비스 제공을 받기 위해 이용자가 설치한 개인용 휴대폰 등의 기기
5. 서비스 이용 : 이용자가 단말기를 이용하여 파머스의 주전산기에 접속하여 정보를 이용하는 것
6. 이용계약 : 서비스를 제공받기 위하여 이 약관으로 파머스과 이용자간의 체결하는 계약을 말함
7. 가입 : 당 애플리케이션이 제공하는 신청서 양식에 해당 정보를 기입하고, 본 약관 등에 동의하여 서비스 이용계약을 완료시키는 행위
8. 탈퇴(해지) : 회원이 이용계약을 종료시키는 행위

제 2장 서비스이용계약

제4조 (이용계약의 성립)
1. 이용계약은 이용자의 이용신청에 대한 서비스의 약관 승락에 의해 성립됩니다.
2. 제1항의 규정에 의해 이용자가 이용 신청을 할 때에는 파머스가 이용자 관리시 필요로 하는 사항을 전자적 방식(파머스의 서버 등 정보처리장치에 접속하여데이터를 입력하는 것을 말합니다)이나 서면으로 하여야 합니다.
3. 이용계약은 이용자번호 단위로 체결하며, 체결단위는 하나의 이용자번호 이상이어야 합니다.
4. 서비스의 대량이용 등 특별한 서비스 이용에 관한 계약은 별도의 계약으로 합니다.

제5조 (이용신청)
1. 서비스를 이용하고자 하는 자는 온라인을 통해 당 애플리케이션의 이용신청양식에 따라 요구하는 사항을 기록하여야 합니다.
2. 서비스를 이용하고자 회원으로 가입하기 위해서는 이용신청을 하고 당 애플리케이션 이용자의 개인정보보호지침과 본 약관을 동의를 하여야 만 회원으로 가입을 완료한 것으로 성립됩니다.
3. 회원가입 이후 당 애플리케이션에서 제공하는 서비스를 제공받을 의사가 없는 등의 사유가 있는 경우에는 회원탈퇴(해지) 할 수 있습니다.

제6조 (이용계약 승낙의 유보)
1. 파머스는 다음 각 호에 해당하는 경우에는 이용계약의 승낙을 유보할 수 있습니다.
① 설비에 여유가 없는 경우
② 기술상에 지장이 있는 경우
③ 기타 서비스의 효율적인 운영 등을 위하여 필요하다고 인정되는 경우
2. 파머스는 다음 각 호에 해당하는 이용계약 신청에 대하여는 이를 거절할 수 있습니다.
① 다른 사람의 명의를 사용하여 이용신청을 하였을 때
② 이용계약 신청서의 내용을 허위로 기재하였을 때
③ 사회의 안녕, 질서 혹은 미풍양속을 저해할 목적으로 이용신청을 한 때
제7조 (계약사항의 변경)
이용자는 다음 사항을 변경하고자 하는 경우 서비스에 접속하여 서비스 내의 기능을 이용하여 변경할 수 있습니다.
1. 개인 이력사항
2. 비밀번호
3. 기타 파머스가 인정하는 사항

제 3장 서비스의 이용

제8조 (서비스 이용시간)
서비스의 이용 시간은 파머스의 업무 및 기술상 특별한 지장이 없는 한 연중무휴,1일 24시간(00:00-24:00)을 원칙으로 합니다. 다만 정기점검 등의 필요로 파머스가정한 날이나 시간은 그러하지 아니합니다.

제 9조(이용자번호 등)
1. 다른 사람의 명의를 사용하여 이용신청을 하였을 때
2. 이용계약 신청서의 내용을 허위로 기재하였을 때
3. 사회의 안녕, 질서 혹은 미풍양속을 저해할 목적으로 이용신청을 한 때

제 10조 (서비스 이용의 제한 및 이용계약의 해지)
1. 이용자가 서비스 이용계약을 해지하고자 하는 때에는 온라인으로 해지신청을 하여야 합니다.
2. 파머스는 이용자가 다음 각 호에 해당하는 경우 사전통지 없이 이용계약을 해지하거나 전부 또는 일부의 서비스 제공을 중지할 수 있습니다.
① 타인의 이용자번호를 사용한 경우
② 다량의 정보를 전송하여 서비스의 안정적 운영을 방해하는 경우
③ 수신자의 의사에 반하는 광고성 정보, 전자우편을 전송하는 경우
④ 정보통신설비의 오작동이나 정보 등의 파괴를 유발하는 컴퓨터 바이러스 프로그램등을 유포하는 경우
⑤ 정보통신윤리위원회로부터의 이용제한 요구 대상인 경우
⑥ 선거관리위원회의 유권해석 상의 불법선거운동을 하는 경우
⑦ 서비스를 통해 얻은 정보를 파머스의 동의없이 상업적으로 이용하는 경우
⑧ 기타 파머스가 부적당하다고 판단하는 경우
3. 전항의 규정에 의하여 이용자의 이용을 제한하는 경우와 제한의 종류 및 기간 등 구체적인 기준은 공지, 서비스 이용안내 등에서 별도로 정하는 바에 의합니다.
4. 해지 처리된 이용자의 정보는 서비스 개선을 위한 자료로서 해지 후 1년간 별도로 저장될 수 있습니다.

제 11조 (이용자 게시물의 삭제 및 서비스 이용제한)
1. 파머스는 서비스용 설비의 용량에 여유가 없다고 판단되는 경우 필요에 따라 이용자가 게재 또는 등록한 내용물을 삭제할 수 있습니다.
2. 파머스는 서비스용 설비의 용량에 여유가 없다고 판단되는 경우 이용자의 서비스 이용을 부분적으로 제한할 수 있습니다.
3. 제 1 항 및 제 2 항의 경우에는 당해 사항을 사전에 온라인을 통해서 공지합니다.
4. 파머스는 이용자가 게재 또는 등록하는 서비스내의 내용물이 다음 각호에 해당한다고 판단되는 경우에 이용자에게 사전 통지없이 삭제할 수 있습니다.
① 다른 이용자 또는 제 3자를 비방하거나 중상모략으로 명예를 손상시키는 경우
② 공공질서 및 미풍양속에 위반되는 내용의 정보, 문장, 도형 등을 유포하는 경우
③ 반국가적, 반사회적, 범죄적 행위와 결부된다고 판단되는 경우
④ 다른 이용자 또는 제3자의 저작권 등 기타 권리를 침해하는 경우
⑤ 게시 기간이 규정된 기간을 초과한 경우
⑥ 이용자의 조작 미숙이나 광고목적으로 동일한 내용의 게시물을 5회이상 반복 등록하였을 경우
⑦ 기타 관계 법령에 위배된다고 판단되는 경우

제 12조 (서비스 제공의 중지 및 제한)
1. 파머스는 다음 각 호에 해당하는 경우 서비스 제공을 중지할 수 있습니다.
① 서비스용 설비의 보수 또는 공사로 인한 부득이한 경우
② 전기통신사업법에 규정된 기간통신사업자가 전기통신 서비스를 중지했을 때
2. 파머스는 국가비상사태, 서비스 설비의 장애 또는 서비스 이용의 폭주 등 으로 서비스 이용에 지장이 있는 때에는 서비스 제공을 중지하거나 제한할 수 있습니다.

제 13조 (파머스의 의무)
1. 파머스는 서비스용 설비를 지속적이고 안정적인 서비스 제공에 적합하도록 유지하여야 하며 서비스용 설비에 장애가 발생하거나 또는 그 설비가 못쓰게 된 경우 그 설비를 수리하거나 복구합니다.
2. 파머스는 서비스 내용의 변경 또는 추가사항이 있는 경우, 해당사항을 당 애플리케이션에 공지합니다.

제 14조 (개인정보보호)
1. 파머스는 정보통신이용촉진등에 관한 법률등 관계법령에 따라 제공받는 이용자의 개인정보 및 서비스 이용 중 생성되는 개인정보를 보호하여야 합니다.
2. 당 애플리케이션의 관리책임자는 관리담당 부서장이며,개인정보 관리책임자의 성명은 별도로 공지하거나 서비스 안내에 게시합니다.
3. 이용자가 자신의 개인정보를 전송 등의 방법으로 당 애플리케이션에 제공하는 행위는 파머스의 개인정보 수집 및 이용 등에 동의하는 것으로 간주되며, 당 애플리케이션의 이용자 개인정보의 수집 및 이용목적은 다음 각 호와 같습니다.
① 서비스 제공 등 이용계약의 이행
② 마케팅 정보 생성 및 이용 고객별 안내
③ 광고 전송 또는 우송
4. 파머스는 개인정보를 이용고객의 별도의 동의 없이 제3자에게 제공하지 않습니다. 다만, 다음 각 호의 경우는 이용고객의 별도 동의 없이 제3자에게 이용고객의 개인정보를 제공할 수있습니다.
① 수사상의 목적에 따른 수사기관의 서면 요구가 있는 경우에 수사협조의 목적으로 국가수사 기관에 성명, 주소 등 신상정보를 제공하는 경우
② 신용정보의 이용 및 보호에 관한 법률, 전기통신관련법률 등 법률에 특별한 규정이 있는 경우
③ 통계, 학술연구 또는 시장조사를 위하여 필요한 경우로서 특정 개인을 식별할 수 없는 형태로 제공하는 경우
5. 이용자는 자신의 개인정보를 열람할 수 있으며, 오류 수정 등 변경할 수 있습니다. 열람 및 변경은 원칙적으로 이용신청과 동일한 방법으로 하며, 자세한 방법은 당 애플리케이션의 공지사항안내 등의 정한 바에 따릅니다.
6. 이용자는 이용계약을 해지함으로써 개인정보의 수집 및 이용에 대한 동의, 목적 이외의 사용에 대한 별도 동의, 제3자 제공에 대한 별도 동의를 철회할 수 있으며, 해지방법은 본 약관에서 별도로 규정한 바에 따릅니다.

제 15조 (이용자의 의무)
1. 이용자는 서비스를 이용할 때 다음 각 호의 행위를 하지 않아야 합니다.
① 다른 이용자의 이용자번호를 부정하게 사용하는 행위
② 서비스를 이용하여 얻은 정보를 파머스의 사전승낙 없이 이용자의 이용 이외의 목적으로 복제하거나 이를 출판, 방송 등에 사용하거나 제3자에게 제공하는 행위
③ 다른 이용자 또는 제3자를 비방하거나 중상모략으로 명예를 손상하는 행위
④ 공공질서 및 미풍양속에 위배되는 내용의 정보, 문장, 도형 등을 타인에게 유포하는 행위
⑤ 반국가적, 반사회적, 범죄적 행위와 결부된다고 판단되는 행위
⑥ 다른 이용자 또는 제3자의 저작권등 기타 권리를 침해하는 행위
⑦ 기타 관계 법령에 위배되는 행위
2. 이용자는 이 약관에서 규정하는 사항과 서비스 이용안내 또는 주의사항을 준수하여야 합니다.
3. 이용자가 설치하는 단말기 등은 전기통신설비의 기술기준에 관한 규칙이 정하는 기준에 적합하여야 하며, 서비스에 장애를 주지 않아야 합니다.

제 4장 서비스이용요금

제16조 (이용요금)
당 애플리케이션의 서비스 이용료는 무료로 합니다. 단, 파머스의 정책에 따라 이용 요금이 유료화될 경우에는 당 애플리케이션의 공지사항안내 등을 통해 게시합니다.

제 5장 서비스이용요금

제17조 (게재된 자료에 대한 권리)
당 애플리케이션에 게재된 자료에 대한 권리는 다음 각 호와 같습니다.
1. 게시물에 대한 권리와 책임은 게시자에게 있으며, 파머스는 게시자의 동의없이는 이를 영리적 목적으로 사용할 수 없습니다. 단, 비영리적 목적인 경우,파머스는 게시자의 동의 없이도 이를 사용할 수 있으며 서비스내의 게재권을 갖습니다.
2. 게시자의 사전 동의가 없이는 이용자는 서비스를 이용하여 얻은 정보를 가공, 판매하는행위 등 서비스에 게재된 자료를 상업적 목적으로 이용할 수 없습니다.

제 6장 서비스이용요금

제18조 (이의신청금지)
이용자는 당 애플리케이션에서 제공하는 서비스 이용 시 발생되는 어떠한 문제에 대해서도 무료 이용 기간 동안은 이의 신청 및 민원을 제기할 수 없습니다.

제19조 (손해배상청구금지)
이용자는 당 애플리케이션에서 제공하는 서비스 이용 시 발생되는 어떠한 문제에 대해서도 무료 이용 기간 동안은 파머스 및 관계 기관에 손해배상 청구를 할 수 없으며 파머스는 이에 대해 책임을 지지 아니합니다.
</string>
    <string name="farm_complete_description">농장주가 요청을 승인하면 알려드릴게요</string>
    <string name="farm_complete_description_title">분양 신청 완료 !</string>
    <string name="text_next">다음</string>
    <string name="farm_first_registration_title">새 농장을 소개해주세요.</string>
    <string name="farm_first_registration_farm_title">농장명</string>
    <string name="farm_first_registration_farm_title_edit_hint">농장 이름 입력</string>
    <string name="farm_first_registration_farm_introduction">농장 소개</string>
    <string name="farm_first_registration_farm_introduction_edit_hint">농장을 자유롭게 소개해보세요.</string>
    <string name="farm_first_registration_farm_image">농장 사진(선택,최대 5장)</string>
    <string name="dialog_request_detail"><u>분양신청내역</u></string>
    <string name="dialog_request_title">요청 온 목록</string>
    <string name="text_close">닫기</string>
    <string name="dialog_request_name">파머스 1호</string>
    <string name="dialog_request_period">희망 분양기간 2022.12.25~2023.01.07</string>
    <string name="text_refuse">거절</string>
    <string name="text_approve">승인</string>
    <string name="introduction_divider">/</string>
    <string name="introduction_max">150</string>
    <string name="introduction_zero">0</string>
</resources>