<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:src="@drawable/circle_check_vector"
            app:layout_constraintBottom_toTopOf="@id/farm_complete_description_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/farm_complete_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/line_seed_kr_rg"
            android:letterSpacing="-0.03"
            android:text="@string/farm_complete_description_title"
            android:textColor="@color/text_1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/farm_complete_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/farm_complete_description"
            style="@style/Body2Reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="204dp"
            android:text="@string/farm_complete_description"
            android:textColor="@color/text_3"
            app:layout_constraintBottom_toTopOf="@id/farm_complete_home_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/farm_complete_home_button"
            style="@style/Body1Med"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="67dp"
            android:background="@drawable/calendar_button_selector_background"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/farm_complete_button_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>