<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.home.HomeSearchFragment">

        <ImageView
            android:id="@+id/btn_alarm"
            android:layout_width="0dp"
            android:layout_height="36dp"
            app:tint="@color/text_2"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--메인 로고-->

        <TextView
            android:id="@+id/farmus_logo_kr"
            android:fontFamily="@font/line_seed_kr_bd"
            android:text="@string/app_korean_name"
            android:textSize="32sp"
            android:textColor="@color/main"
            android:layout_width="wrap_content"
            android:layout_height="42sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_alarm"
            />

        <ImageView
            android:id="@+id/farmus_logo_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="-4dp"
            android:src="@drawable/farmus_logo_vector_image_"
            app:layout_constraintTop_toTopOf="@id/farmus_logo_kr"
            app:layout_constraintStart_toEndOf="@id/farmus_logo_kr"/>

        <androidx.constraintlayout.helper.widget.Layer
            android:id="@+id/farm_us_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="farmus_logo_image, farmus_logo_kr"
            tools:ignore="MissingConstraints" />


        <!--메인 검색 바-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_bar"
            style="@style/Body2Reg"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/search_bar_selector"
            android:drawableStart="@drawable/search_vector_image_green"
            android:paddingStart="8dp"
            android:hint="@string/search_bar_hint_text"
            android:inputType="text"
            android:padding="1dp"
            android:textColorHint="@color/gray_first"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/farmus_logo_kr"
            />


            <TextView
                android:id="@+id/tv_recent_search"
                style="@style/Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_searches"
                android:textColor="@color/text_1"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="@id/search_bar"
                app:layout_constraintTop_toBottomOf="@id/search_bar"
                />

            <TextView
                android:id="@+id/btn_delete_all"
                style="@style/Body1Reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_history"
                android:textColor="@color/text_3"
                android:layout_marginTop="29dp"
                app:layout_constraintEnd_toEndOf="@id/search_bar"
                app:layout_constraintTop_toBottomOf="@id/search_bar"/>

        <!--최근 검색어 chip-->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/recent_search_chipgroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_recent_search"
            app:layout_constraintStart_toStartOf="@id/search_bar"
            app:layout_constraintEnd_toEndOf="@id/search_bar"
            android:layout_marginTop="13dp"
            app:singleSelection="true"
            app:singleLine="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
